--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -3,6 +3,7 @@
 .wrapper {
   min-height: 100%;
   width: 100%;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
 }
